# kya-badla

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/chng/: args.h  io.h
include/kybdl/: args.h  frame_ops.h  img_process.h  io.h  morph.h  stats.h  utils.h
src/: args.cpp  frame_ops.cpp  img_process.cpp  io.cpp  main.cpp  morph.cpp  stats.cpp
